ui overlaping fixed

--- a/new/frontend/src/App.css
+++ b/new/frontend/src/App.css
@@ -16,3 +16,8 @@
   background-color: #dc3545;
   color: white;
 }
+body{
+  font-family: Arial, sans-serif;
+  background-color: aliceblue
+
+}
