--- a/new/frontend/src/Components/Login.css
+++ b/new/frontend/src/Components/Login.css
@@ -6,7 +6,7 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-body {
+.login-background {
   
   background-color: aliceblue;
   height: 100vh;
